# platform_agent

./: .dockerignore  .gitignore  Dockerfile.service  Dockerfile.worker  README.md  README.txt  backend_service.py  main.py  package-lock.json  package.json  prisma.config.ts  pyproject.toml  streamlit_app.py
agent_config/: chat_backend_agent_example.json  livekit-agent-test.json  primary_agent.json  schema.py  store.py
chat_agent_backend/: README.md  __init__.py  app.py
db/: schema.prisma
demo/livekit_agents/: primary_agent.py
demo/livekit_trunks/: create_inbound_trunk.py  create_outbound_trunk.py  delete_trunk.py
k8s/: README.txt  namespace.yaml  service-deployment.yaml  service-rbac.yaml
k8s/dev/: service-deployment.yaml  service-rbac.yaml  service-runtime-config.yaml  service-vva-reconciler.yml
livekit_agents/: base_agent.py  create_agent.py  factory.py  runtime.py
livekit_agents_tools/: mcp_proxy_tool.py  rag_tool.py  servicenow_tool.py  session_tools.py  skill_dispatch_toolset.py  vva_skill_toolset.py
livekit_trunks/: create_inbound_trunk.py  delete_trunk.py  list_sip_trunks.py  provision.py
sandbox_env/: .gitignore  Dockerfile  README.md  build_image.sh  container_entrypoint.py  run_agreement_skill.sh  run_skill.sh  sample_input.json  sandbox.env.example
scripts/: README.txt  __init__.py  deploy_agent_worker.py  render_k8s_runtime_config.py  render_k8s_worker_manifest.py  run_service.py
skill_jobs/: __init__.py  models.py  store.py  worker.py
telephony/: __init__.py  livekit_sip.py  vonage.py
test/: local_agent_test.txt
(+35 files in other folders)
